--- a/shard.yml
+++ b/shard.yml
@@ -4,6 +4,10 @@ version: 0.1.0
 authors:
   - Postmodern <postmodern.mod3@gmail.com>
 
+description: |
+  Crystal bindings for libudis86, an easy-to-use, minimalistic disassembler
+  library for the x86-64 / x86 class of instruction set architectures. 
+
 crystal: 0.33.0
 
 license: MIT
