--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -15,6 +15,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install libextractor
       run: |
+        apt-get update && \
         apt-get install -yq software-properties-common && \
         add-apt-repository ppa:sbasalaev/pub && \
         apt-get update && \
