--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -13,13 +13,13 @@ jobs:
       image: crystallang/crystal
     steps:
     - uses: actions/checkout@v2
-    - name: Install libextractor
+    - name: Install libudis86
       run: |
-        apt-get update && \
-        apt-get install -yq software-properties-common && \
+        apt-get update -y && \
+        apt-get install -y software-properties-common && \
         add-apt-repository ppa:sbasalaev/pub && \
-        apt-get update && \
-        apt-get install -yq udis86
+        apt-get update -y && \
+        apt-get install -y udis86
     - name: Install dependencies
       run: shards install
     - name: Run tests
