Correct the spectator dependency.

--- a/shard.yml
+++ b/shard.yml
@@ -18,6 +18,6 @@ libraries:
 development_dependencies:
   spectator:
     gitlab: arctic-fox/spectator
-    version: ">= 0.9.9 and < 1.0.0"
+    version: "~> 0.9, >= 0.9.9"
   # crodoc:
   #   github: watzon/crodoc
